@@ -1,8 +1,0 @@
-
-
-typedef struct
-{
-  int tag;
-  int len;
-  unsigned char *ptr;
-} tag_t;
